# rusterizer

./: Cargo.toml  LICENSE  README.md
benches/: raster_bench.rs
src/: camera.rs  lib.rs  line.rs  main.rs  matrix.rs  rasterize.rs  shape.rs  triangle.rs  vector.rs
