[package]
name = "rust_gfx"
version = "0.1.0"
authors = ["Ishmeister <497594+ishmeister@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
pixels = "0.4.0"
winit = "0.25.0"
winit_input_helper = "0.10"
approx = "0.5.0"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "raster_bench"
harness = false